<resources>
    <string name="app_name">bt-receiver</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="disconnected">Disconnected…</string>
    <string name="button_bt">Button BT</string>
    <string name="button_back">Button back</string>
    <string name="button_next">Button next</string>
    <string name="button_play">Button play</string>
    <string name="album_image">album image</string>
</resources>