<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#232C20"
    tools:context=".view.MainActivity"
    android:padding="8dp">

    <ImageView
        android:id="@+id/image_album_cover"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:foregroundGravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:background="@drawable/album_cover"
        android:elevation="20dp"
        android:contentDescription="@string/album_image" />

    <TextView
        android:id="@+id/music_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/image_album_cover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/dummy_text"
        android:textSize="24sp"
        android:textColor="@color/white"
        />

    <ImageButton
        android:id="@+id/image_button_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/music_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:background="@drawable/play_button"
        android:src="@drawable/baseline_play_arrow_24"
        android:scaleType="fitXY"
        android:padding="10dp"
        android:contentDescription="@string/button_play" />

    <ImageButton
        android:id="@+id/image_button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/music_name"
        app:layout_constraintStart_toEndOf="@id/image_button_play"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/skip_button"
        android:src="@drawable/baseline_skip_next_24"
        android:scaleType="fitXY"
        android:padding="10dp"
        android:contentDescription="@string/button_next" />

    <ImageButton
        android:id="@+id/image_button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/music_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/image_button_play"
        android:layout_marginTop="60dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/skip_button"
        android:src="@drawable/baseline_skip_previous_24"
        android:scaleType="fitXY"
        android:padding="10dp"
        android:contentDescription="@string/button_back" />

    <ImageButton
        android:id="@+id/image_button_bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/image_button_play"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        android:background="@drawable/skip_button"
        android:src="@drawable/baseline_bluetooth_24"
        android:scaleType="fitXY"
        android:padding="10dp"
        android:contentDescription="@string/button_bt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/image_button_bluetooth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:text="@string/disconnected"
        android:textColor="@color/dark_red"
        android:textSize="24sp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>